# RTOS_Primes

./: .gitignore  CMakeLists.txt  Dockerfile  README.md  posix.cmake  send_primes.py  test_primes.py
src/: console.c  file_io_stubs.c  main.c  sim_app.c  sim_app.h  tasks.c  tasks.h  tasks_posix.c
src/config/default/: FreeRTOSConfig.h  definitions.h  device.h  fault_handlers.c  freertos_hooks.c
src/portable/Posix/: port.c  portmacro.h
